--- a/css/mobile/_tablette.scss
+++ b/css/mobile/_tablette.scss
@@ -436,7 +436,7 @@
 			}
 		}
 	}
-	h3.whereami{
+	.whereami{
 		display: block;
 		float: left;
 	    margin-top: 5px;
